syntax = "proto3";

service Billing {
    rpc CreatePlusTransaction(CreatePlusTransactionRequest) returns (CreatePlusTransactionResponse);

    rpc CreateMinusTransaction(CreateMinusTransactionRequest) returns (CreateMinusTransactionResponse);

    rpc CloseBillingCycle(CloseBillingCycleRequest) returns (CloseBillingCycleResponse);

    rpc GetTransactionsGroupedByUser(GetTransactionsGroupedByUserRequest) returns (GetTransactionsGroupedByUserResponse)
}

message CreatePlusTransactionRequest {
    string UserId = 1;

    string TaskId = 2;

    int64 Amount = 3;
}

message CreatePlusTransactionResponse {
    Status status = 1;
}

message CreateMinusTransactionRequest {
    string UserId = 1;

    string TaskId = 2;

    int64 Amount = 3;
}

message CreateMinusTransactionResponse {
    Status status = 1;
}

message CloseBillingCycleRequest {

}

message CloseBillingCycleResponse {
    Status status = 1;
}

message GetTransactionsGroupedByUserRequest {

}

message GetTransactionsGroupedByUserResponse {

}

message Status {
    int32 code = 1;

    string msg = 2;
}