syntax = "proto3";

message UserCreatedEvent {
    string public_id = 2;

    string login = 3;

    string email = 4;

    string full_name = 5;

    string role = 6;
}

message UserUpdatedEvent {
    string public_id = 2;

    string login = 3;

    string email = 4;

    string full_name = 5;

    string role = 6;
}

message UserDeletedEvent {
    string public_id = 2;
}

message TaskCreatedEvent {
    string public_id = 1;

    string assigned_to = 2;

    string description = 3;

    bool done = 4;
}

message TaskUpdatedEvent {
    StringContainer public_id = 1;

    StringContainer assigned_to = 2;

    StringContainer description = 3;

    BoolContainer done = 4;
}

message TaskDeletedEvent {
    string public_id = 1;
}

// StringContainer нужен для того чтобы отличать отсутствие значения(nil) от пустого значения
message StringContainer {
    string value = 1;
}

// BoolContainer нужен для того чтобы отличать отсутствие значения(nil) от пустого значения
message BoolContainer {
    bool value = 1;
}